RESOLVED FIXED113788
Web Inspector: memory instrumentation for external strings is broken
https://bugs.webkit.org/show_bug.cgi?id=113788
Summary Web Inspector: memory instrumentation for external strings is broken
Yury Semikhatsky
Reported 2013-04-02 08:37:40 PDT
r144527 broke this when skipped all raw pointers in the memory instrumentation traversal algorithm. No we don't see JS externals strings in the native memory snapshot.
Attachments
Patch (8.75 KB, patch)
2013-04-02 08:43 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2013-04-02 08:43:46 PDT
Ilya Tikhonovsky
Comment 2 2013-04-02 08:48:18 PDT
Comment on attachment 196149 [details] Patch LGTM
WebKit Review Bot
Comment 3 2013-04-02 11:15:00 PDT
Comment on attachment 196149 [details] Patch Clearing flags on attachment: 196149 Committed r147466: <http://trac.webkit.org/changeset/147466>
WebKit Review Bot
Comment 4 2013-04-02 11:15:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.